# Simple-Shallow-Wave

./: CMakeLists.txt  README.md  box_collider.cpp  box_collider.h  cube.cpp  imgui.ini  main.cpp  ray.h  shader.h  water_surface.cpp  water_surface.h
backup/: cpu_simulating.cpp  opengl_version  reference  two_triangle  with_imgui
shader/: compute_height.vs  height_map.fs  height_map.vs  pipeline_test.fs  pipeline_test.vs
src/: CMakeLists.txt  cube.cpp  cube.h  glad.c  hittable.cpp  hittable.h  main.cpp  ray.cpp  ray.h  shader.h  water.cpp  water.h  water_surface.cpp  water_surface.h
